# math3

./: Cargo.toml  README.md
src/: assert.rs  base.rs  complex.rs  fastmath.rs  fastmathcalc.rs  lib.rs  precision.rs  rsutils.rs
src/dfp/: dfp.rs  dfp_field.rs  mod.rs
src/util/: fastmath.rs  fastmathcalc.rs  mod.rs  precision.rs
