[package]

name = "math3"
version = "0.0.1"
authors = [ "Your name <aschoerk@gmx.net>" ]

[dependencies]
float-cmp = "*"
lazy_static = "0.1.*"
GSL = "0.4"


[dev-dependencies.hamcrest]
git = "https://github.com/carllerche/hamcrest-rust.git"

# [dependencies.lazy_static]
#  git = "https://github.com/rust-lang-nursery/lazy-static.rs"
